# rag-v2

./: .gitignore  CLAUDE.md  Dockerfile  PLANNING.md  PRD.md  TASKS.md  compose.yml  pyproject.toml  redis.conf  test_e2e.py
app/: logging.py  main.py
app/api/: models.py  routes.py
app/ingest/: metadata.py  normalize.py
app/jobs/: status.py  tasks.py  worker.py
app/search/: index_setup.py  indexing.py  milvus_client.py  opensearch_client.py
app/storage/: __init__.py  azure_blob.py  base.py  s3_minio.py
test_scripts/: upload_test_file.py
